tests/baselines/reference/es2022IntlAPIs.errors.txt
es2022IntlAPIs.ts(4,1): error TS2348: Value of type 'SegmenterConstructor' is not callable. Did you mean to include 'new'?


==== es2022IntlAPIs.ts (1 errors) ====
    const locale = new Intl.Locale('en');
    const mixed = [ 'en', locale ] as const;
    
    Intl.Segmenter(); // expect error
    ~~~~~~~~~~~~~~~~
!!! error TS2348: Value of type 'SegmenterConstructor' is not callable. Did you mean to include 'new'?
    new Intl.Segmenter();
    new Intl.Segmenter('en');
    new Intl.Segmenter(locale);
    new Intl.Segmenter(mixed);
    const { granularity } = new Intl.Segmenter('en', { granularity: 'grapheme' }).resolvedOptions();
    const segments = new Intl.Segmenter().segment('foo');
    segments.containing();
    segments.containing(0);
    [ ...segments ];
    Intl.Segmenter.supportedLocalesOf(locale, { localeMatcher: 'best fit' });
    
    for (const timeZoneName of [ 'shortOffset', 'longOffset', 'shortGeneric', 'longGeneric' ] as const) {
      new Intl.DateTimeFormat('en', { timeZoneName }).resolvedOptions().timeZoneName = timeZoneName;
    }
    
    const { languageDisplay } = new Intl.DisplayNames('en', { type: 'region', languageDisplay: 'dialect' }).resolvedOptions();
    for (const type of [ 'calendar', 'dateTimeField' ] as const) {
      new Intl.DisplayNames('en', { type }).resolvedOptions().type = type;
    }
    